# sol

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  kmq2_hud_scripting.txt  kmq2_misc_scripting.txt  kmquake2.txt  kmquake2_changelog.txt  kmquake2_lazarus.txt  readme.md
3zb2/: 3zb2.dsp  3zb2_2008.vcproj  g_cmds.c  g_ctf.c  g_func.c  g_local.h  g_main.c  g_misc.c  g_misc_kex.c  g_model.c  g_save.c  g_spawn.c  p_weapon.c  q_shared.c  q_shared.h
awaken2/: awakening2_2008.vcproj  g_func.c  g_local.h  g_misc.c  g_save.c  g_spawn.c  g_utils.c  q_shared.c  q_shared.h
client/: cl_cinematic.c  cl_cinematic.cpp  cl_console.c  cl_console.cpp  cl_download.c  cl_download.cpp  cl_effects.c  cl_ents.c  cl_ents.cpp  cl_event.c  cl_event.cpp  cl_http.c  cl_http.cpp  cl_hud.c  cl_hud.cpp  cl_hud_script.c  cl_hud_script.cpp  cl_input.cpp  cl_keys.c  cl_keys.cpp  cl_lights.c  cl_lights.cpp  cl_loc.c  cl_loc.cpp  cl_main.c  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_particle.c  cl_particle.cpp  cl_predict.c  cl_qcurl.c  cl_qcurl.cpp  cl_screen.c  cl_screen.cpp  cl_string.c  cl_string.cpp  cl_tempent.c  cl_tempent.cpp  cl_utils.c  (+15 more)
dday/: g_cmds.c  g_combat.c  g_ents.c  g_local.h  g_main.c  g_maps.c  g_save.c  g_spawn.c  g_svcmds.c  g_utils.c  g_weapon.c  game.h  p_client.c  p_generic_wep.c  p_observer.c  p_weapon.c  q_shared.h
dday/ai/: ai_dropnodes.c  ai_links.c  ai_main.c
docs/: template.c
extractfuncs/: ef_local.h  extractfuncs.c  l_precomp.c  l_script.c
game/: acebot.h  acebot_ai.c  acebot_ai.cpp  acebot_cmds.cpp  acebot_items.c  acebot_items.cpp  acebot_movement.cpp  acebot_nodes.c  acebot_nodes.cpp  acebot_spawn.c  acebot_spawn.cpp  g_ai.c  g_ai.cpp  g_camera.cpp  g_chase.cpp  g_cmds.c  g_cmds.cpp  g_combat.c  g_crane.c  g_crane.cpp  g_ctf.c  g_ctf.cpp  g_ctf.h  g_fog.c  g_fog.cpp  g_func.c  g_func.cpp  g_func_decs.h  g_func_list.h  g_items.cpp  g_local.h  g_lock.cpp  g_main.c  g_main.cpp  g_misc.c  g_misc.cpp  g_misc_kex.c  g_misc_laz.c  g_misc_laz.cpp  g_model.c  (+76 more)
game/entity/: entity.cpp  entity.h  entity_func_areaportal.cpp  entity_info_player_start.cpp  entity_light.cpp  entity_manager.cpp  entity_manager.h  entity_player.cpp  entity_player.h  entity_player_start.cpp  entity_worldspawn.cpp
game/old/: acebot_ai.cpp  acebot_cmds.cpp  acebot_movement.cpp  acebot_nodes.cpp  acebot_spawn.cpp  g_ai.cpp  g_camera.cpp  g_chase.cpp  g_cmds.cpp  g_combat.cpp  g_crane.cpp  g_ctf.cpp  g_func.cpp  g_func_list.h  g_lights.cpp  g_lock.cpp  (+35 more)
linux/: qgl_linux.c  sys_linux.c  vid_so.c
missionpack/: g_ai.c  g_cmds.c  g_combat.c  g_crane.c  g_fog.c  g_func.c  g_func_decs.h  g_func_list.h  g_func_rogue.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_misc_laz.c  g_misc_q1.c  g_mmove_decs.h  g_mmove_list.h  g_monster.c  g_newweap.c  g_save.c  g_sound.c  g_spawn.c  g_target.c  g_target_laz.c  g_tracktrain.c  g_trigger.c  g_turret.c  g_utils.c  g_utils_q1.c  g_weapon.c  g_weapon_q1.c  g_weapon_rogue.c  g_weapon_xatrix.c  game.h  m_actor.c  m_actor_weap.c  m_berserk.c  m_boss2.c  m_boss31.c  m_boss32.c  (+57 more)
null/: vid_null.c
qcommon/: cmd.cpp  cmodel.c  cmodel.cpp  common.c  common.cpp  cvar.c  cvar.cpp  filesystem.c  filesystem.cpp  filesystem.h  json_parse.c  net_chan.cpp  pmove.cpp  qcommon.h  qfiles.h  vid_modes.h  wal_json.c
renderer/: qgl.h  r_alias.c  r_alias.cpp  r_alias.h  r_alias_md2.c  r_alias_misc.c  r_arb_program.cpp  r_backend.cpp  r_bloom.c  r_bloom.cpp  r_draw.c  r_draw.cpp  r_entity.c  r_entity.cpp  r_fog.c  r_fragment.cpp  r_glstate.cpp  r_image.c  r_image.cpp  r_light.c  r_light.cpp  r_local.h  r_main.c  r_main.cpp  r_misc.c  r_misc.cpp  r_model.c  r_model.cpp  r_model.h  r_particle.c  r_sky.c  r_sky.cpp  r_sprite.c  r_surface.c  r_surface.cpp  r_upscale.cpp  r_utils.c  r_utils.cpp  r_warp.c  r_warp.cpp
server/: server.h  sv_ccmds.c  sv_ccmds.cpp  sv_ents.c  sv_ents.cpp  sv_game.c  sv_game.cpp  sv_init.c  sv_init.cpp  sv_main.c  sv_main.cpp  sv_send.cpp  sv_user.cpp  sv_world.c  sv_world.cpp
steam_wrapper/: resource.h  wrapper.c
tools_bin/: extractfuncs.sh  extractfuncs_x64  extractfuncs_x64.sh
ui/: menu_apply_changes.c  menu_credits.c  menu_credits.cpp  menu_defaults_confirm.c  menu_game.c  menu_game_credits.c  menu_game_load.c  menu_game_load.cpp  menu_game_save.c  menu_game_saveload.c  menu_main.c  menu_main.cpp  menu_mods.c  menu_mp_addressbook.c  menu_mp_addressbook.cpp  menu_mp_dmoptions.c  menu_mp_download.c  menu_mp_joinserver.c  menu_mp_playersetup.c  menu_mp_playersetup.cpp  menu_mp_startserver.c  menu_mp_startserver.cpp  menu_multiplayer.c  menu_options.c  menu_options_controls.c  menu_options_effects.c  menu_options_effects.cpp  menu_options_interface.c  menu_options_interface.cpp  menu_options_keys.c  menu_options_keys.cpp  menu_options_screen.c  menu_options_sound.c  menu_options_sound.cpp  menu_quit.c  menu_quit.cpp  menu_video.c  menu_video_advanced.c  ui_draw.c  ui_draw.cpp  (+11 more)
ultra/: aj_cvar.c  aj_main.c  aj_menu.c  aj_replacelist.c  aj_statusbars.c  b_unzip.h  bot_ai.c  bot_items.c  bot_misc.c  bot_nav.c  bot_spawn.c  e_grapple.c  e_hook.c  funhook.c  g_cmds.c  g_combat.c  g_ctf.c  g_func.c  g_func_rogue.c  g_local.h  g_main.c  g_misc.c  g_model.c  g_newdm.c  g_newfnc.c  g_newweap.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_unzip.c  g_utils.c  g_weapon.c  g_zip.c  game.h  makefile  makefile_kmq2  p_client.c  p_hud.c  p_trail.c  (+5 more)
unix/: gl_sdl.c  glw_unix.h  in_unix.c  sdl_gl.c  sdl_gl.cpp  sdl_snd.c  sdl_snd.cpp  unix_cd.c  unix_cd.cpp  unix_glw.h  unix_input.c  unix_input.cpp  unix_main.c  unix_main.cpp  unix_net.c  unix_net.cpp  unix_qgl.c  unix_qgl.cpp  unix_qsh.c  unix_qsh.cpp  unix_vid.c  unix_vid.cpp  unixquake.h  vid_so.c
win32/: in_win.c  sys_win.c  win_conproc.c  win_dedconsole.c  win_glimp.c  win_input.c  win_main.c  win_net.c  win_qgl.c  win_qsh.c  win_snd.c  win_vid.c  winquake.h
zaero/: g_func_decs.h  g_func_list.h  g_local.h  g_main.c  g_save.c  g_spawn.c  game.h  m_brain.c  m_chick.c  m_flipper.c  m_float.c  m_flyer.c  m_hover.c  m_soldier.c  m_tank.c  p_hud.c  p_weapon.c  q_shared.c  q_shared.h  z_weapon.c  zaero_2008.vcproj
(+147 files in other folders)
